create api methods, create render methods, add eventlisterners

--- a/src/index1.html
+++ b/src/index1.html
@@ -13,27 +13,18 @@
     <div class="leaderboard-cont">
       <div class="title-btn-cont">
         <h4> Recent Scores</h4>
-        <button type="button"> Refresh!</button>
+        <button type="button" id="refresh-btn"> Refresh!</button>
       </div>
 
       <ul class="scores-list">
-        <li class="score-list-item">
-          <p>name: 158</p>
-        </li>
-        <li class="score-list-item">
-          <p>name: 158</p>
-        </li>
-        <li class="score-list-item">
-          <p>name: 158</p>
-        </li>
       </ul>
     </div>
 
     <div class="form-cont">
       <h4> Add your score!</h4>
-      <form action="#">
-        <input type="text" placeholder="your name">
-        <input type="text" placeholder="your score">
+      <form action="#" class="fomr">
+        <input type="text" name="name" placeholder="your name">
+        <input type="number" name="score" placeholder="your score">
         <input type="submit" value="Submit">
       </form>
     </div>
