create app styling

--- a/src/index1.html
+++ b/src/index1.html
@@ -13,7 +13,7 @@
     <div class="leaderboard-cont">
       <div class="title-btn-cont">
         <h4> Recent Scores</h4>
-        <button type="button" id="refresh-btn"> Refresh!</button>
+        <button type="button" id="refresh-btn" class="btnn"> Refresh!</button>
       </div>
 
       <ul class="scores-list">
@@ -23,9 +23,9 @@
     <div class="form-cont">
       <h4> Add your score!</h4>
       <form action="#" class="fomr">
-        <input type="text" name="name" placeholder="your name">
-        <input type="number" name="score" placeholder="your score">
-        <input type="submit" value="Submit">
+        <input type="text" name="name" class="inputt" placeholder="your name">
+        <input type="number" name="score" class="inputt" placeholder="your score">
+        <input type="submit" class="btnn input-btn" value="Submit">
       </form>
     </div>
   </div>
